--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,25 @@
-sudo: required
+sudo: true
 dist: trusty
 language: cpp
 
 matrix:
-  fast_finish: true
   include:
     - os: linux
-      env: JOB=verify-commit-format
+      env: TARGET=linux
     - os: linux
-      env: JOB=build-docs DOXYGEN_CONFIG_FILE=doxygen.conf
-    - os: linux
-      env: JOB=build-ubuntu-14-04
+      env: TARGET=windows
+      services:
+        - docker
     - os: osx
-      osx_image: xcode7.3
-      env: JOB=build-osx
+      env: TARGET=osx
 
-script: "./.travis/$JOB.sh"
+install:
+  - .travis/install-$TARGET
 
-deploy:
-  provider: releases
-  api_key:
-    secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
-  file: "./qTox.dmg"
-  on:
-    condition: $TRAVIS_OS_NAME == osx
-    repo: qTox/qTox
-    tags: true
-  skip_cleanup: true
-
-after_success:
-  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && test $JOB == "build-docs" && bash ./.travis/deploy-docs.sh
+script:
+  - source .travis/env-$TARGET.sh
+  - RUN $CMAKE -B_build -H.
+  - RUN $MAKE -C _build -j4 -k
 
 branches:
   only:
