--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,23 +51,25 @@ find_package(Qt5Xml           REQUIRED)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(Qt5CorePatches)
 
-pkg_search_module(APPINDICATOR appindicator-0.1)
-pkg_search_module(GDK_PIXBUF   gdk-pixbuf-2.0)
-pkg_search_module(GLIB         glib-2.0)
-pkg_search_module(GTK          gtk+-2.0)
+pkg_search_module(APPINDICATOR    appindicator-0.1)
+pkg_search_module(GDK_PIXBUF      gdk-pixbuf-2.0)
+pkg_search_module(GLIB            glib-2.0)
+pkg_search_module(GTK             gtk+-2.0)
 
-pkg_search_module(LIBAVCODEC   REQUIRED libavcodec)
-pkg_search_module(LIBAVDEVICE  REQUIRED libavdevice)
-pkg_search_module(LIBAVFORMAT  REQUIRED libavformat)
-pkg_search_module(LIBAVUTIL    REQUIRED libavutil)
-pkg_search_module(LIBQRENCODE  REQUIRED libqrencode)
-pkg_search_module(LIBSODIUM    REQUIRED libsodium)
-pkg_search_module(LIBSWSCALE   REQUIRED libswscale)
-pkg_search_module(LIBTOXAV     REQUIRED libtoxav)
-pkg_search_module(LIBTOXCORE   REQUIRED libtoxcore)
-pkg_search_module(OPENAL                openal) # Actually required, but might be an OSX framework.
-pkg_search_module(SQLCIPHER    REQUIRED sqlcipher)
-pkg_search_module(VPX          REQUIRED vpx)
+pkg_search_module(LIBAVCODEC      REQUIRED libavcodec)
+pkg_search_module(LIBAVDEVICE     REQUIRED libavdevice)
+pkg_search_module(LIBAVFORMAT     REQUIRED libavformat)
+pkg_search_module(LIBAVUTIL       REQUIRED libavutil)
+pkg_search_module(LIBQRENCODE     REQUIRED libqrencode)
+pkg_search_module(LIBSODIUM       REQUIRED libsodium)
+pkg_search_module(LIBSWSCALE      REQUIRED libswscale)
+pkg_search_module(OPENAL                   openal) # Actually required, but might be an OSX framework.
+pkg_search_module(SQLCIPHER       REQUIRED sqlcipher)
+pkg_search_module(TOXAV           REQUIRED toxav)
+pkg_search_module(TOXCORE         REQUIRED toxcore)
+pkg_search_module(TOXDNS          REQUIRED toxdns)
+pkg_search_module(TOXENCRYPTSAVE  REQUIRED toxencryptsave)
+pkg_search_module(VPX             REQUIRED vpx)
 
 # XScreenSaver support.
 find_library(XSS_LIBRARIES          NAMES Xss)
@@ -99,10 +101,12 @@ link_directories(${LIBAVUTIL_LIBRARY_DIRS})
 link_directories(${LIBQRENCODE_LIBRARY_DIRS})
 link_directories(${LIBSODIUM_LIBRARY_DIRS})
 link_directories(${LIBSWSCALE_LIBRARY_DIRS})
-link_directories(${LIBTOXAV_LIBRARY_DIRS})
-link_directories(${LIBTOXCORE_LIBRARY_DIRS})
 link_directories(${OPENAL_LIBRARY_DIRS})
 link_directories(${SQLCIPHER_LIBRARY_DIRS})
+link_directories(${TOXAV_LIBRARY_DIRS})
+link_directories(${TOXCORE_LIBRARY_DIRS})
+link_directories(${TOXDNS_LIBRARY_DIRS})
+link_directories(${TOXENCRYPTSAVE_LIBRARY_DIRS})
 link_directories(${VPX_LIBRARY_DIRS})
 
 if(MINGW)
@@ -512,10 +516,12 @@ pkg_link_module(${PROJECT_NAME} LIBAVUTIL)
 pkg_link_module(${PROJECT_NAME} LIBQRENCODE)
 pkg_link_module(${PROJECT_NAME} LIBSODIUM)
 pkg_link_module(${PROJECT_NAME} LIBSWSCALE)
-pkg_link_module(${PROJECT_NAME} LIBTOXAV)
-pkg_link_module(${PROJECT_NAME} LIBTOXCORE)
 pkg_link_module(${PROJECT_NAME} OPENAL)
 pkg_link_module(${PROJECT_NAME} SQLCIPHER)
+pkg_link_module(${PROJECT_NAME} TOXAV)
+pkg_link_module(${PROJECT_NAME} TOXCORE)
+pkg_link_module(${PROJECT_NAME} TOXDNS)
+pkg_link_module(${PROJECT_NAME} TOXENCRYPTSAVE)
 pkg_link_module(${PROJECT_NAME} VPX)
 
 if(AVFOUNDATION_LIBRARIES AND
@@ -549,6 +555,11 @@ if(MINGW)
 endif()
 
 if(APPLE)
+  set(MACOSX_BUNDLE_SHORT_VERSION_STRING 1.4.1)
+  set(SHORT_VERSION ${MACOSX_BUNDLE_SHORT_VERSION_STRING})
+  set_target_properties(${PROJECT_NAME} PROPERTIES
+    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_SOURCE_DIR}/osx/info.plist")
+
   find_path(MACDEPLOYQT_PATH macdeployqt PATH_SUFFIXES bin)
   if(NOT MACDEPLOYQT_PATH)
     message(FATAL_ERROR "Could not find macdeployqt for OSX bundling. You can point MACDEPLOYQT_PATH to it's path.")
@@ -557,9 +568,12 @@ if(APPLE)
   set(BUNDLE_PATH "${CMAKE_BINARY_DIR}/${PROJECT_NAME}.app")
 
   install(CODE "
-  execute_process(COMMAND ${MACDEPLOYQT_PATH}/macdeployqt \"${BUNDLE_PATH}\")
-  message(STATUS \"Creating dmg of app\")
-  execute_process(COMMAND hdiutil create -volname ${PROJECT_NAME} -srcfolder \"${BUNDLE_PATH}\" -ov -format UDZO \"${PROJECT_NAME}.dmg\")
+  message(STATUS \"Creating app bundle\")
+  execute_process(COMMAND ${MACDEPLOYQT_PATH}/macdeployqt ${BUNDLE_PATH} -no-strip)
+  message(STATUS \"Updating library paths\")
+  execute_process(COMMAND ${CMAKE_SOURCE_DIR}/osx/macfixrpath ${BUNDLE_PATH})
+  message(STATUS \"Creating dmg image\")
+  execute_process(COMMAND hdiutil create -volname ${PROJECT_NAME} -srcfolder ${BUNDLE_PATH} -ov -format UDZO ${PROJECT_NAME}.dmg)
   " COMPONENT Runtime
   )
 else()
